# jolla-mind2-rk-playground

./: devenv.nix  devenv.yaml  pyproject.toml
devenv/modules/: airockchip.nix  rknn.nix
