[project]
name = "jolla-mind2-rk-playground"
version = "0.0.1"
readme = "README.md"
authors = [
    {name = "Asko Soukka", email = "asko.soukka@iki.fi"},
]
requires-python = ">= 3.10, <3.11"
dependencies = [
    "flask==2.2.2",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
    "rknn-toolkit-lite2>=2.3.0",
    "werkzeug==2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true

[dependency-groups]
dev = [
    "editables>=0.5",
]
